force-app/main/default/objects/Event_Activity__c/Event_Activity__c.object-meta.xml
<CustomObject>
    <label>Event Activity</label>
    <nameField>
        <displayFormat>EVA-{0000}</displayFormat>
        <label>Event Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>