force-app/main/default/objects/Event_Activity__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <label>Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>