force-app/main/default/objects/Event_Activity__c/fields/Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendee__c</fullName>
    <label>Event Attendee</label>
    <referenceTo>Event_Attendees__c</referenceTo>
    <relationshipLabel>Event Activities</relationshipLabel>
    <relationshipName>Event_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>