force-app/main/default/objects/Event_Activity__c/fields/Trailblazer_Event__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailblazer Event</label>
    <referenceTo>Trailblazer_Event__c</referenceTo>
    <relationshipLabel>Event Activities</relationshipLabel>
    <relationshipName>Event_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>