force-app/main/default/objects/Event_Activity__c/fields/TwitterPost_Id__c.field-meta.xml
<CustomField>
    <fullName>TwitterPost_Id__c</fullName>
    <label>TwitterPost Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>