force-app/main/default/objects/Event_Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vote</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Game 1</fullName>
            </value>
            <value>
                <fullName>Game 2</fullName>
            </value>
            <value>
                <fullName>Tweet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>